feat(analytics): update the analytics endpoints
