# apps/backend/src/features/analytics/routes/public.routes.ts
@@ -1,0 +1,16 @@
+// apps/backend/src/features/analytics/routes/api.routes.ts
+import { Router } from "express";
+
+import {
+    createAnalyticsEvent
+} from "#features/analytics/controllers/public.controllers.js";
+
+const router = Router();
+
+// Get hourly statistics
+router.post(
+    "/",
+    createAnalyticsEvent
+);
+
+export default router;
