# apps/backend/src/routes/api.routes.ts
@@ -1,9 +1,14 @@
 import { Router } from "express"
+import swaggerUi from 'swagger-ui-express';
 
 import urlRoutes from "#features/url/routes/api.routes.js"
 import analyticsRoutes from "#features/analytics/routes/api.routes.js"
-import swaggerUi from 'swagger-ui-express';
+import { authToken } from "#features/token/domain/token-service.js";
+import { READ_URL_PERMISSION } from "#features/token/data-access/const.js";
+
 import swaggerApiDoc from "../../docs/api-doc.json" with {type: "json"}
+import { apiRateLimiter } from "#lib/rate-limiting/rate-limiters.js";
+
 
 const router = Router()
 
@@ -34,6 +39,6 @@ router.get('/docs', swaggerUi.setup(swaggerApiDoc, swaggerOptions));
 
 // Your API routes
 router.use("/url", urlRoutes)
-router.use("/analytics", analyticsRoutes)
+router.use("/analytics", authToken(READ_URL_PERMISSION), apiRateLimiter(1, 150), analyticsRoutes)
 
 export default router;
